[metadata]
name = exasyncio
version = 0.1
description = Asyncio client library for Exasol
author = blenq
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    aiohttp
    backports.zoneinfo;python_version<"3.9"
    rsa
python_requires = >=3.6


[coverage:run]
branch = True
source = exasyncio
