[metadata]
name = exasyncio
version = 0.1
description = Asyncio client library for Exasol
author = blenq
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    aiohttp
    backports.zoneinfo;python_version<"3.9"
    rsa
python_requires = >=3.7

[options.packages.find]
include = exasyncio

[coverage:run]
branch = True
source = exasyncio
