[metadata]
name = exasyncio
version = 0.1
description = Asyncio client library for Exasol
author = blenq
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Framework :: AsyncIO

[options]
packages = find:
install_requires =
    aiohttp
    backports.zoneinfo;python_version<"3.9"
    rsa
python_requires = >=3.7

[options.packages.find]
include = exasyncio

[coverage:run]
branch = True
source = exasyncio
